--- a/public/popup.html
+++ b/public/popup.html
@@ -13,6 +13,28 @@
         <span id="crypto_vision_activation_button_text">Crypto Vision Activated</span>
     </div>
 
+    <div id="crypto_vision_donation_box">
+        <span id="crypto_vision_donation_button">
+            Is this extension helpful? Tip the author!
+        </span>
+
+        <div id="crypto_vision_donation_links">
+            <div id="crypto_vision_donation_link_cash">
+                <img src="icons/cash.png">
+                <span>Cash App (Fiat)</span>
+            </div>
+            <div id="crypto_vision_donation_link_strike">
+                <img src="icons/strike.png">
+                <span>Strike (Lighting Network)</span>
+            </div>
+            <div id="crypto_vision_donation_link_address">
+                <img src="icons/address.png">
+                <span class="copied">Copied address!</span>
+                <span class="normal">My Address (Any token, any chain)</span>
+            </div>
+        </div>
+    </div>
+
 
 </body>
 </html>
